--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "antd": "^3.24.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "formik": "^2.0.3",
     "gh-pages": "^2.1.1",
@@ -29,7 +31,7 @@
     "lint:fix": "./node_modules/.bin/eslint --ext js,jsx src --fix",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "server": "node ./server"
+    "server": "nodemon -r esm ./server"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,10 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.7.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-styled-components": "^1.10.6",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.9",
+    "nodemon": "^1.19.4",
     "prettier": "1.18.2"
   },
   "husky": {
